[project]
name = "landscape-client"
version = "24.04"
requires-python = ">=3.8"
dependencies = [
    "configobj==5.0.8",
    "pycurl==7.45.3",
    "Twisted==24.3.0",
]

[build-system]
requires = ["setuptools==70.1.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.setuptools]
packages = [
    "landscape.client",
    "landscape.client.broker",
    "landscape.client.manager",
    "landscape.client.monitor",
    "landscape.client.package",
    "landscape.client.snap_http",
    "landscape.client.upgraders",
    "landscape.client.user",
    "landscape.lib",
    "landscape.lib.apt",
    "landscape.lib.apt.package",
    "landscape.message_schemas",
    "landscape.sysinfo",
]
